index.css
:root {
    --background-color: #EDEDED;
    --ui-background-color: #FFFFFF; 
    --width: 375px;
    --gray: #555555;
    --font-color: black;
    --light-gray: #C6C6C6;
}

body.dark-mode {
    --background-color: #282828;
    --ui-background-color: #4B4B4B; 
    --width: 375px;
    --gray: #979797;
    --font-color: #EFEFEF;
    --light-gray: #363636;
}
html, body, .whole-app, .app-header-container, .post-reply {
    margin: 0 auto;
    padding: 0;

}

html, body {
    font-size: 14px;
    background-color: var(--background-color);
    font-family: "Source Sans 3", sans-serif;
    line-height: 0.2;
    color: var(--font-color)
}

.whole-app, 
.app-header-container, 
.post,
.post-header,
.post-footer,
.icon-container,
.app-footer-container,
.reply-inner,
.handle-and-comment-containter {
    display: flex;
}

.whole-app,
.post,
.post-footer,
.handle-and-comment-container {
    flex-direction: column;
}

.bold-text {
    font-weight: 700;
}

.like-count {
    margin-bottom: 8px;
}

/* a container for the entire app */
.whole-app { 
    max-width: var(--width);
    position: relative;
}

/* the container for logo, user avatar */
.app-header-container {
    border-bottom: 2px solid var(--light-gray);
    justify-content: space-between;
    align-items: center;
    background-color: var(--ui-background-color);
    position: fixed;
    height: 67px;
    width: 100%;
    max-width: var(--width);
    z-index: 1;
}

.logo-image {
    height: 90%;
    margin-left: 15px;
}

.logo-image.dark-mode {
    filter: invert(.706);    
}

.user-avatar {
    border-radius: 50%;
    height: 34px;
    width: 34px;
    margin-right: 15px;
}

/* the container for an entire post instance */
.post {
    background-color: var(--ui-background-color);
    margin-bottom: 25px;
    border: none;
}

/* the header of a post including poster avatar, name, location */
.post-header {
    align-items: center;
    padding: 10px;
}

/* the footer of a post */
.post-footer {
    padding: 12px;
}

.icon-container {
    justify-content: space-between;
    height: 23px;
    width: 82px;
    margin-bottom: 3px;
}

.icon, .reply-preview, .comments-modal-close-btn {
    cursor: pointer;
}

.icon {
    height: 100%;
}

.icon:hover {
    opacity: 40%;
}

.icon.dark-mode {
    filter: invert(.9);    
}

.red-heart {
    filter: hue-rotate(10deg);
}

.post-text {
    line-height: 1.1;
    margin-top: 3px;
}

.reply-preview {
    color: var(--gray);
    line-height: 1.1;
    margin-top: -9px;
    margin-bottom: -15px;
}

.floating-header-footer-spacing {
    margin-top: 67px;
    padding: 0;
}

.app-footer-container {
    justify-content: space-around;
    align-items: center;
    padding: 30px 0px;
    margin: 0px;
    background-color: var(--ui-background-color);
    position: fixed;
    bottom: 0px;
    min-height: 67x;
    width: 100%;
    max-width: var(--width);
    z-index: 1;
    border-radius: 5px 5px 0 0;
    box-shadow: 0 -.8px .25px var(--light-gray);
}

.input-btn {
    opacity: 0%;
}

.comments-modal{
    display: none; /*flex when displayed*/
    position: fixed;
    margin: auto;
    bottom: 0px;
    z-index: 900;
    left: 0;
    right: 0;
    border-radius: 20px 20px 0px 0px;
    width: var(--width);
    height: 490px;
    background-color: var(--ui-background-color);
    overflow-y: auto;
    padding-top: 3.5em;
}

#comments-modal-inner {
    margin: 0 1.5em;
    padding: 0;
}
  

.comments-modal-close-btn{
    position: absolute;
    top: 2%;
    right: 2%;
    background-color: transparent;
    border: 1.5px solid var(--gray);
    color: var(--gray);
    border-radius: 50%;
    padding: 2px 6px;
    font-size: 14px;
}

.reply-inner {
    height: 100%;
    line-height:normal;
    padding: .5em 0;
}

.reply-text, .handle-and-comment-container > .bold-text {
    margin: 0;
}

.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.70);
    z-index: 800;
  }

